--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,4 +1,4 @@
-<h1 class="left"><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+<h1 class="left"><a href="{{ root_url }}/">{{ site.title }}</a><span>{{ site.subtitle }}</span></h1>
 <nav class="menu left">{% include navigation.html %}</nav>
 <div class="right">
 	<form class="search right" action="{{ site.simple_search }}" method="get">
