--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -26,6 +26,10 @@ header{
 		@media screen and (max-width: 1040px){
 			float: none !important;
 		}
+		span{
+			font-size: 0.6em;
+			margin-left: 10px;
+		}
 	}
 	nav{
 		margin-left: 30px;
