--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,6 @@
-<ul class="main">
-	<li><a href="{{ root_url }}/">Blog</a></li>
-	<li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-	<li><a href="{{ root_url }}/blog/categories/english-post/">English</a></li>
+﻿<ul class="main">
+<li><a href="{{ root_url }}/">Home</a></li>
+<li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+<li><a href="{{ root_url }}/blog/categories/english-post/">English</a></li>
+<li><a href="{{ root_url }}/blog/categories/cat/">ボッディ</a></li>
 </ul>
