--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -3,15 +3,13 @@ header{
 	padding: 30px 0;
 	border-bottom: 1px solid $gray04;
 	line-height: 30px;
-	@media screen and (max-width: 1040px){
-		height: auto;
-		position: relative;
-		padding-bottom: 10px;
-		>.right{
-			position: absolute;
-			top: 30px;
-			right: 0;
-		}
+	height: auto;
+	position: relative;
+	padding-bottom: 10px;
+	>.right{
+		position: absolute;
+		top: 30px;
+		right: 0;
 	}
 	a{
 		color: $gray01;
@@ -23,35 +21,33 @@ header{
 	h1{
 		font-weight: 300;
 		font-size: 30px;
-		@media screen and (max-width: 1040px){
-			float: none !important;
-		}
+		float: none !important;
 		span{
 			font-size: 0.6em;
 			margin-left: 10px;
+			@media screen and (max-width: 900px){
+				display: none !important;
+			}
 		}
 	}
 	nav{
-		margin-left: 30px;
-		@media screen and (max-width: 1040px){
-			margin-left: 0;
-			margin-top: 15px;
-			float: none !important;
-		}
+		line-height: 0;
+		margin-left: 5px;
+		margin-top: 5px;
+		float: none !important;
 		>ul{
+			line-height: 30px;
 			@media screen and (max-width: 600px){
 				display: none;
 			}
 			>li{
-				margin-left: 50px;
+				margin-left: 20px;
 				@include inline-block;
-				@media screen and (max-width: 1040px){
 					margin-left: 0;
 					margin-right: 50px;
 					&:last-of-type{
 						margin-right: 0;
 					}
-				}
 				&:hover{
 					>a{
 						color: $main;
@@ -61,17 +57,11 @@ header{
 					padding: 38px 30px 38px 0;
 					margin-top: -38px;
 					background: image-url('detail.png') right center no-repeat;
-					@media screen and (max-width: 1040px){
 						padding: 18px 30px 18px 0;
 						/* Todo */
 						&:only-child{
 							padding-right: 0;
 						}
-					}
-					&:only-child{
-						padding-right: 0;
-						background: none;
-					}
 				}
 			}
 			ul{
@@ -84,9 +74,7 @@ header{
 				border: 1px solid $gray03;
 				list-style: none;
 				display: none;
-				@media screen and (max-width: 1040px){
-					top: 40px;
-				}
+				top: 40px;
 				@include box-shadow(0 4px 8px rgba(0,0,0,0.1));
 				@include border-radius(0 0 5px 5px);
 				ul{
@@ -168,7 +156,7 @@ header{
 	}
 	.social{
 		margin-right: 15px;
-		@media screen and (max-width: 600px){
+		@media screen and (max-width: 700px){
 			display: none;
 		}
 		a{
@@ -205,6 +193,13 @@ header{
 			}
 			&.github{
 				background: image-url('github.png') center no-repeat rgb(175,182,202);
+				border: 1px solid rgb(175,182,202);
+				&:hover{
+					border: 1px solid darken(rgb(175,182,202), 10%);
+				}
+			}
+			&.pinterest{
+				background: image-url('pinterest.png') center no-repeat rgb(204,33,39);
 				border: 1px solid rgb(175,182,202);
 				&:hover{
 					border: 1px solid darken(rgb(175,182,202), 10%);
