--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,1 +1,4 @@
-Copyright &copy; {{ site.time | date: "%Y" }} {{ site.title }} Powered by Octopress &amp; Github
+<p>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+</p>
