--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -16,7 +16,7 @@ header hgroup img{
     top:24px;
     left:10px;
 }
-header hgroup img:hover{
+header hgroup:hover img{
     background-position: 0px -200px;
     opacity:1;
     left:15px;
