--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -19,7 +19,7 @@ header hgroup img{
 header hgroup:hover img{
     background-position: 0px -200px;
     opacity:1;
-    left:15px;
+    top: 15px;
 }
 .gallery img{
     width: 30%;
