--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,5 +9,6 @@
   </div>
   <footer role="contentinfo">{% include footer.html %}</footer>
   {% include after_footer.html %}
+<script data-ad-client="ca-pub-4066516091601351" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
